# twitter_analytics

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  travis.yaml
twitter_analytics/: requirements.txt  settings.py  urls.py  wsgi.py
twitter_analytics/collector/: apps.py  models.py  serializers.py  services.py  views.py
twitter_analytics/collector/management/commands/: collect.py
twitter_analytics/collector/migrations/: 0001_initial.py
twitter_analytics/metrics/: apps.py  mixins.py  views.py
twitter_analytics/metrics/templates/: amount.sql  top_authors.sql  top_hashtags.sql
